# university-agent

./: .env.example  .gitignore  ACCEPTANCE_CRITERIA.md  ARCHITECTURE_BLUEPRINT.md  ARTICLE_PATTERN_NOTES.md  BACKLOG_INDEX.md  CLAUDE.md  DECISIONS.md  ERRORS.md  LICENSE  MEMORY.md  README.md  TASK_REQUIREMENTS.md  pyproject.toml
.claude/skills/database-designer/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md  examples.md  production-considerations.md
docs/traces/: run-02c3d53f067a.json  run-03b4ea902129.json  run-10e66ebf389e.json  run-1114cce5bc76.json  run-14b217796c20.json  run-17bba0fb616f.json  run-21b9bf220049.json  run-2426c29b2cc9.json  run-25da96e7ab1f.json  run-2fc42a993145.json  run-3f2e27495668.json  run-440f35411a5d.json  run-4849a7dc48f0.json  run-55e145704bb6.json  run-5a1e520898c3.json  run-5f77df0aaae3.json  run-651edc4ebf35.json  run-6641d0226a2e.json  run-6ce6a2f79dd5.json  run-776317cbd703.json  run-86f5316b9115.json  run-8f4f2fdfbdfa.json  run-a224206a92f6.json  run-b0ebb20403bc.json  run-b74bb79f9a87.json  run-c3779827a114.json  run-c68e582dcf11.json  run-cec35da4c583.json  run-d7927d7914e2.json  run-db8d713b003a.json  run-e112695443c5.json  run-f31046dc0a02.json  run-f3c56f5d4d92.json
prompts/: FINAL_AUDIT_PROMPT.md  FIRST_PROMPT.md  SESSION_PROMPT.md
scripts/: audit_deliverables.py
src/uni_agent/: __init__.py  cli.py  config.py
tests/: conftest.py  test_cli_config.py  test_database.py  test_graph_e2e.py  test_routing.py  test_safety.py  test_sql_generation.py  test_tracing.py
ui/: streamlit_app.py
(+27 files in other folders)
