[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uni-agent"
version = "0.1.0"
description = "Database-agnostic natural-language QA agent over a university SQL database, built with LangGraph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "sqlglot>=25",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]
langsmith = [
    "langsmith>=0.1",
]
ui = [
    "streamlit>=1.36",
]

[project.scripts]
uni-agent = "uni_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uni_agent = ["db/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["uni_agent"]
ignore_missing_imports = true
warn_unused_ignores = true
